--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
+    "react-particles-js": "^2.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-tooltip": "^3.8.4",
