--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.5.1",
+    "react-animated-text": "^0.1.3",
     "react-dom": "^16.5.1",
     "react-particles-js": "^2.3.0",
     "react-router-dom": "^4.3.1",
