env files set up

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-API_HOST_URL=olee-portfolio-api.herokuapp.com
-API_TIMEOUT_INTERVAL=100000
-API_SECRET='hello'
-API_KEY='world'
-HTTP_PROXY= http://localhost:5000
+REACT_APP_API_HOST_URL= 'http://localhost:5000'
+REACT_APP_API_TIMEOUT_INTERVAL=100000
+REACT_APP_API_SECRET='hello'
+REACT_APP_API_KEY='world'
+
