--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "1.1.5",
     "react-tooltip": "^3.8.4",
     "redux": "^4.0.0",
+    "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^3.4.9"
   },
