--- a/package.json
+++ b/package.json
@@ -4,23 +4,35 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "react": "^16.5.1",
+    "react": "^16.8.6",
     "react-animated-text": "^0.1.3",
-    "react-dom": "^16.5.1",
+    "react-dom": "^16.8.6",
     "react-particles-js": "^2.3.0",
-    "react-redux": "^5.0.7",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5",
-    "react-tooltip": "^3.8.4",
-    "redux": "^4.0.0",
+    "react-scripts": "3.0.1",
+    "react-tooltip": "^3.10.0",
+    "redux": "^4.0.4",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^3.4.9"
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
