--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.11.2",
     "axios": "^0.18.0",
-    "react": "^16.8.6",
+    "react": "^16.13.1",
     "react-animated-text": "^0.1.3",
-    "react-dom": "^16.8.6",
-    "react-particles-js": "^2.3.0",
-    "react-redux": "^7.1.0",
+    "react-dom": "^16.13.1",
+    "react-particles-js": "^2.7.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.0.1",
-    "react-tooltip": "^3.10.0",
-    "redux": "^4.0.4",
+    "react-tooltip": "^3.11.6",
+    "redux": "^4.0.5",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
