--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.11.2",
+    "@material-ui/core": "^4.11.0",
     "axios": "^0.18.0",
     "react": "^16.13.1",
     "react-animated-text": "^0.1.3",
